k8s/dev/networkpolicy_qKet_dev.yaml
############################
# networkpolicy_qKet.yaml  #
# namespace: qket-dev       #
############################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-same-namespace
  namespace: qket-dev
spec:
  podSelector:
    matchLabels:
      app: qket-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: qket-dev # 동일 namespace 안에서만 트래픽 허용
      ports:
        - port: 8080
